styled login/register

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
     -->
     <title>My Neighborhood Health</title>
   </head>
-  <body class="body">
+  <body class="body h-100 gradient-bg">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
